--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,361 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+:root {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+/* NAVBAR */
+
+#root .App {
+  width: 100%;
+}
+
+.App header {
+
+}
+
+.App header nav{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  position: fixed;
+  z-index: 1;
+}
+
+header nav {
+  width: 100%;
+  background-color:#282c34;
+}
+
+header h1 {
+  font-size: 26px;
+  color: white;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+ul li {
+  padding: 10px 20px;
+}
+
+ul li a {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  border-bottom: 3px solid white;
+}
+
+nav h3 {
+  cursor: pointer;
+  font-size: 24px;
+  color: white;
+  display: none;
+}
+
+/* HEADING BACKGROUND */
+header .heading {
+  height: 85vh;
+  color: #282c34;
+  background: url("./imgs/bg-1.webp");
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  padding-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  padding-bottom: 25px;
+}
+
+.heading h1 {
+  color: #282c34;
+  font-size: 70px;
+  margin-bottom: 15px;
+}
+
+.heading button {
+  font-size: 24px;
+  color: black;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  background-color:lightgreen;
+  margin-bottom: 30px;
+  margin-top: 0px;
+  border: 3px solid black;
+  transition: all 0.6s ease;
+}
+
+.heading button:hover {
+  background-color: lime;
+  transform: scale(1.04);
+}
+
+/* IMGAGES CONTAINER */
+.App .imagesDisplay {
+  background-color: whitesmoke;
+  margin: 10px auto;
+  border-radius: 15px;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  align-items: center;
+  justify-content: center;
+  grid-gap: 20px;
+  width: 95%;
+}
+
+.imagesDisplay .singleBox {
+  width: 400px;
+  transition: all 0.5s ease ;
+}
+
+.imagesDisplay .singleBox:hover {
+  transform: scale(1.05);
+  box-shadow: 3px -24px 173px 10px rgba(0,0,0,0.29) ;
+-webkit-box-shadow: 3px -24px 173px 10px rgba(0,0,0,0.29) ;
+-moz-box-shadow: 3px -24px 173px 10px rgba(0,0,0,0.29) ;
+}
+
+.singleBox img {
+  width: 100%;
+  cursor: pointer;
+}
+
+/*Full image */
+.App .fullImage {
+  width: 100%;
+  height: 101%;
+  margin: 10px auto;
+  border: 1px solid rgba(255, 255, 255, .25);
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, .25);
+  backdrop-filter: blur(15px);
+  position: fixed;
+  top: -9px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  object-fit: contain;
+  z-index: 2;
+  display: flex;
+  align-self: center;
+
+}
+
+.fullImage .img-slider {
+  display: flex;
+  width: 95%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 0px auto;
+}
+
+
+.fullImage img {
+  width: 80%;
+  height: 100%;
+  object-fit: contain;
+  margin: auto;
+  cursor: pointer;
+}
+
+.fullImage button {
+  font-size: 34px;
+  background-color: lightseagreen;
+  color: black;
+  cursor: pointer;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.fullImage button:hover {
+  color: black;
+  background-color: lightgreen;
+}
+
+.App .searchImage {
+  width: 100%;
+  margin: 30px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.searchImage form {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+form input {
+  font-size: 34px;
+  color: black;
+  width: 100%;
+  background-color: lightgray;
+  border-radius: 20px;
+  padding: 15px;
+  text-indent: 5px;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+form input:hover {
+  box-shadow: 3px -24px 173px 10px rgba(123, 108, 108, 0.29) ;
+-webkit-box-shadow: 3px -24px 173px 10px rgba(150, 132, 132, 0.29) ;
+-moz-box-shadow: 3px -24px 173px 10px rgba(0,0,0,0.29) ;
+}
+
+/*RESPONSIVENESS*/
+@media  screen and (max-width: 1300px) {
+  .App .imagesDisplay {
+    grid-template-columns: auto auto;
   }
-  to {
-    transform: rotate(360deg);
+
+  .heading h1 {
+    font-size: 55px;
   }
 }
+
+@media  screen and (max-width: 900px) {
+  .imagesDisplay .singleBox {
+    width: 300px;
+  }
+
+  nav h3 {
+    display: flex;
+  }
+
+  nav ul {
+    position: fixed;
+    justify-content: center;
+    opacity: 0;
+    align-items: center;
+    top: -300px;
+    width: 100%;
+    background-color: #282c34;
+    flex-direction: column;
+    margin: 0px;
+    padding: 0;
+    transition: all 0.5s ease;
+  }
+
+  ul li {
+    margin: 15px auto;
+    padding: 0px;
+  }
+  
+  li a {
+    text-align: center;
+    margin: 15px auto;
+    padding: 0px;
+  }
+
+  .heading h1 {
+    font-size: 50px;
+  }
+
+  .heading button {
+    font-size: 20px;
+  }
+}
+
+@media  screen and (max-width: 700px) {
+  .imagesDisplay .singleBox {
+    width: 250px;
+  }
+
+  .heading h1 {
+    font-size: 40px;
+  }
+
+  .heading button {
+    font-size: 18px;
+  }
+
+  form input {
+    font-size: 26px;
+    padding: 10px;
+  }
+
+  .fullImage button {
+    font-size: 24px;
+    padding: 15px;
+  }
+
+  .App .heading {
+    background-clip: border-box;
+    background-size: cover;
+    background-origin: content-box;
+    background-color: bisque;
+  }
+}
+
+@media  screen and (max-width: 550px) {
+  .App .imagesDisplay {
+    grid-template-columns: auto;
+  }
+  .imagesDisplay .singleBox {
+    width: 80%;
+    margin: auto;
+  }
+
+  .heading h1 {
+    font-size: 30px;
+  }
+
+  .heading button {
+    font-size: 16px;
+  }
+
+  form input {
+    font-size: 24px;
+    padding: 7px;
+  }
+
+  .fullImage button {
+    font-size: 18px;
+    padding: 13px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .fullImage button {
+    font-size: 16px;
+    padding: 20px 8px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .fullImage button {
+    font-size: 16px;
+    padding: 20px 6px;
+  }
+}
+
+
+
+
+
